--- a/settings.json
+++ b/settings.json
@@ -7,5 +7,6 @@
     "startDelay": 5000,
     "turnDelay": 1000,
     "jumpTurns": 1,
-    "inventTurns": 4
+    "inventTurns": 4,
+    "maxGameLength": 30
 }
